--- a/views/delete.erb
+++ b/views/delete.erb
@@ -1,7 +1,7 @@
 <ul>
-  <h2>備品情報を削除</h2>
+  <h3>備品情報を削除</h3>
   <form method="post" action="/delete">
     <input type="text" name="id" value="1">
-    <input type="submit" value="post!">
+    <input type="submit" value="削除">
   </form>
 </ul>
