--- a/views/new.erb
+++ b/views/new.erb
@@ -1,5 +1,5 @@
 <ul>
-  <h2>備品を追加</h2>
+  <h3>備品を追加</h3>
   <form method="post" action="/new">
     <input type="text" name="name" value="test">
     <input type="text" name="url" value="test">
@@ -7,6 +7,6 @@
     <input type="value" name="count" value="0">
     <input type="text" name="memo" value="test">
     <input type="text" name="admin" value="test">
-    <input type="submit" value="post!">
+    <input type="submit" value="追加">
   </form>
 </ul>
