--- a/views/update.erb
+++ b/views/update.erb
@@ -1,5 +1,5 @@
 <ul>
-  <h2>備品情報を更新</h2>
+  <h3>備品情報を更新</h3>
   <form method="post" action="/update">
     <input type="text" name="id" value="1">
     <input type="text" name="name" value="testtest">
@@ -8,6 +8,6 @@
     <input type="value" name="count" value="10">
     <input type="text" name="memo" value="testtest">
     <input type="text" name="admin" value="testtest">
-    <input type="submit" value="post!">
+    <input type="submit" value="更新">
   </form>
 </ul>
