--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,6 @@
-<h1>備品情報検索システム ver.β</h1>
 <ul>
-  <h2>検索してみますか！</h2>
-
+  <form method="post" action="/search">
+    <input type="text" name="name" value="">
+    <input type="submit" value="検索">
+  </form>
 </ul>
