--- a/views/new.erb
+++ b/views/new.erb
@@ -1,6 +1,6 @@
 <ul>
   <h3>備品を追加</h3>
-  <form method="post" action="/new">
+  <form method="post" action="/admin/new">
     <input type="text" name="name" value="test">
     <input type="text" name="url" value="test">
     <input type="text" name="category" value="test">
