--- a/views/update.erb
+++ b/views/update.erb
@@ -1,6 +1,6 @@
 <ul>
   <h3>備品情報を更新</h3>
-  <form method="post" action="/update">
+  <form method="post" action="/admin/update">
     <input type="text" name="id" value="1">
     <input type="text" name="name" value="testtest">
     <input type="text" name="url" value="testtest">
