--- a/views/layout.erb
+++ b/views/layout.erb
@@ -36,9 +36,9 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">管理用<span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="/new">追加</a></li>
-                <li><a href="/update">更新</a></li>
-                <li><a href="/delete">削除</a></li>
+                <li><a href="/admin/new">追加</a></li>
+                <li><a href="/admin/update">更新</a></li>
+                <li><a href="/admin/delete">削除</a></li>
               </ul>
             </li>
           </ul>
