update category -> tag

--- a/views/new.erb
+++ b/views/new.erb
@@ -3,7 +3,7 @@
   <form method="post" action="/admin/new">
     <input type="text" name="name" value="test">
     <input type="text" name="url" value="test">
-    <input type="text" name="category" value="test">
+    <input type="text" name="tag" value="test">
     <input type="value" name="count" value="0">
     <input type="text" name="memo" value="test">
     <input type="text" name="admin" value="test">
