--- a/views/search.erb
+++ b/views/search.erb
@@ -12,7 +12,7 @@
               <th>ID</th>
               <th>名前</th>
               <th>URL</th>
-              <th>カテゴリ</th>
+              <th>タグ</th>
               <th>カウント</th>
               <th>メモ</th>
               <th>管理者</th>
@@ -24,7 +24,7 @@
               <th scope="row"><%= asset.id %></th>
               <td><%= h asset.name %></td>
               <td><%= h asset.url %></td>
-              <td><%= h asset.category %></td>
+              <td><%= h asset.tag %></td>
               <td><%= h asset.count %></td>
               <td><%= h asset.memo %></td>
               <td><%= h asset.admin %></td>
