--- a/views/update.erb
+++ b/views/update.erb
@@ -4,7 +4,7 @@
     <input type="text" name="id" value="1">
     <input type="text" name="name" value="testtest">
     <input type="text" name="url" value="testtest">
-    <input type="text" name="category" value="testtest">
+    <input type="text" name="tag" value="testtest">
     <input type="value" name="count" value="10">
     <input type="text" name="memo" value="testtest">
     <input type="text" name="admin" value="testtest">
