--- a/views/layout.erb
+++ b/views/layout.erb
@@ -32,7 +32,12 @@
         <!-- Collect the nav links, forms, and other content for toggling memo : class="active" -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li><a href="/search">検索</a></li>
+            <li>
+              <form class="navbar-form" method="post" action="/search">
+                <input type="text" name="name" value="">
+                <button type="submit" class="btn btn-info">検索</button>
+              </form>
+            </li>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">管理用<span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
