update search result

--- a/views/search.erb
+++ b/views/search.erb
@@ -2,10 +2,9 @@
   <div class="container bs-docs-container">
     <div class="row">
       <div class="" role="main">
-        <div class="" data-example-id="carousel-with-captions">
-        </div>
-
         <h3>検索結果</h3>
+        <p>「<%= @key %>」で検索</p>
+        タグで絞り込み：<input type="text" name="name" value="" style="margin-bottom:8px;">
         <table class="table table-bordered table-striped">
           <thead>
             <tr>
